[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/ship_new_black_symbol.png" type="Texture" id=1]
[ext_resource path="res://Assets/reacteur.png" type="Texture" id=2]
[ext_resource path="res://Ship/Ship.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47, 44.5734 )

[node name="Ship" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 4 )

[node name="ShipSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "idle"

[node name="React_left" type="Sprite" parent="."]
position = Vector2( -14, 24.5 )
texture = ExtResource( 2 )

[node name="React_right" type="Sprite" parent="."]
position = Vector2( 14, 24.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.19209e-07, 0.426605 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
